fix next button getting cut off in spanish (#9308)

--- a/theme/tutorial-sidebar.less
+++ b/theme/tutorial-sidebar.less
@@ -236,7 +236,6 @@
         white-space: nowrap;
         overflow: hidden;
         text-overflow: ellipsis;
-        width: 7rem;
     }
 
     > .ui.button:last-child {
